2001-10-08  Peter Stephenson  <pws@csr.com>

	* 15965: Src/exec.c, Src/glob.c, Src/subst.c: rename glob() to
	zglob() to avoid clashes with library function.

	* 15931: Src/builtin.c, Src/exec.c:  make EXIT traps work in
	subshells the way they used to before 15844: react to explicit
	`exit' but not falling off end of list.

2001-10-08  Andrej Borsenkow  <bor@zsh.org>

	* 15964: Src/Modules/tcp.c: use SOCKLEN_T

2001-10-06  Clint Adams  <clint@zsh.org>

	* Norbert Koch: 15954: Doc/Zsh/arith.yo:
	fix inconsistency of variable name in example.

2001-10-05  Peter Stephenson  <pws@csr.com>

	* 15949: Completion/compinstall: add handling for expand style.

2001-10-05  Oliver Kiddle  <opk@zsh.org>

	* 15851, 15948: Src/builtin.c, Doc/Zsh/builtins.yo: add printf
	builtin	with basic POSIX functionality

2001-10-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 15946: Src/Zle/compresult.c: fix calculation of number of
	columns needed with list_packed

	* 15945: Completion/Zsh/Command/_cd: make _cd use only one call
	to _alternative, including completions from _tilde (using the
	named-directories tag)

	* 15944: Completion/Unix/Type/_path_files, Doc/Zsh/compsys.yo:
	make expand style (file completion) work again; no more special
	behaviour with menu completion; try to make docs clearer

2001-10-05  Geoff Wing  <gcw@zsh.org>

	* unposted: Doc/Zsh/options.yo: typo

2001-10-05  Clint Adams  <clint@zsh.org>

	* 15941: Completion/Unix/Command/_mount:
	complete reiserfs mount options.

	* 15940: Completion/Unix/Command/_mount:
	complete -o utf8 for mount -t vfat.

	* 15939: Completion/Unix/Command/_mount:
	complete xfs mount options (for Linux).

	* 15938: Completion/Unix/Command/_mount:
	complete ext3 mount options.

2001-10-02  Clint Adams  <clint@zsh.org>

	* 15919: Src/linklist.c, Src/Modules/tcp.c, Src/Modules/tcp.h:
	use LinkLists in tcp module rather than somewhat equivalent code.

2001-10-01  Peter Stephenson  <pws@csr.com>
